-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0
-
Desktop
-
-
87d32424de2f471a520c1f3ba0c3035fbff7ee06 (qt/qtbase/dev) 9d2b474b5f6aa07ee731d28f9774d10dfaa49b32 (qt/qtbase/5.15)
Qt 5.15.0 since image conversion is using global thread leading to dead lock in some situation where large number of image files are being read and QFuture and watchers are being used to parallelize it.
Attached example can be used to reproduce it on windows, this works good with 5.14
Mostlikerly this change is the reason of it:
https://codereview.qt-project.org/c/qt/qtbase/+/282332
- is duplicated by
-
QTBUG-84857 Deadlock occurs when QImage::scaled is called in QtConcurrent::run
-
- Closed
-
-
QTBUG-85164 Image resizing hangs
-
- Closed
-
-
QTBUG-85668 Qt 5.15 multithreading issue when rescale images
-
- Closed
-
-
QTBUG-87338 image scaling example freezes
-
- Closed
-