src/corelib/thread/qthreadpool.h
@@ -93,6 +93,8 @@ public:
 
     void clear();
 
+    bool contains(const QThread *thread) const;
+
 #if QT_DEPRECATED_SINCE(5, 9)
     QT_DEPRECATED_X("use tryTake(), but note the different deletion rules")
     void cancel(QRunnable *runnable);
